--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
+<script>window.alert("This site is still under construction so you will see alot of unnatural content.")</script>
 
-  <title>Hostit</title>
+  <title>Kodev</title>
 
 
   <!-- bootstrap core css -->
