--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Hostit</title>
+  <title>Kodev</title>
 
 
   <!-- bootstrap core css -->
