--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
         </div>
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img src="about-img.png" alt="">
           </div>
         </div>
 
@@ -137,19 +137,19 @@
             </h4>
             <div class="info_links">
               <a class="" href="index.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 Home
               </a>
               <a class="active" href="about.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 About
               </a>
               <a class="" href="service.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 Services
               </a>
               <a class="" href="contact.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 Contact Us
               </a>
             </div>
