--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <div class="row">
                     <div class=" col-lg-10 mx-auto">
                       <div class="img-box">
-                        <img src="images/slider-img.png" alt="">
+                        <img src="slider-img.png" alt="">
                       </div>
                     </div>
                   </div>
@@ -141,7 +141,7 @@
                   <div class="row">
                     <div class=" col-lg-10 mx-auto">
                       <div class="img-box">
-                        <img src="images/slider-img.png" alt="">
+                        <img src="slider-img.png" alt="">
                       </div>
                     </div>
                   </div>
@@ -173,7 +173,7 @@
                   <div class="row">
                     <div class=" col-lg-10 mx-auto">
                       <div class="img-box">
-                        <img src="images/slider-img.png" alt="">
+                        <img src="slider-img.png" alt="">
                       </div>
                     </div>
                   </div>
@@ -202,7 +202,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s1.png" alt="">
+              <img src="s1.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -219,7 +219,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s2.png" alt="">
+              <img src="s2.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -235,7 +235,7 @@
         <div class="col-md-6 col-lg-4 ">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s3.png" alt="">
+              <img src="s3.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -251,7 +251,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s4.png" alt="">
+              <img src="s4.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -267,7 +267,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s5.png" alt="">
+              <img src="s5.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -284,7 +284,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s6.png" alt="">
+              <img src="s6.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -313,7 +313,7 @@
         </div>
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img src="about-img.png" alt="">
           </div>
         </div>
 
@@ -331,7 +331,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/server-img.jpg" alt="">
+            <img src="server-img.jpg" alt="">
             <div class="play_btn">
               <button>
                 <i class="fa fa-play" aria-hidden="true"></i>
@@ -392,23 +392,23 @@
             </h4>
             <div class="info_links">
               <a class="active" href="index.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 Home
               </a>
               <a class="" href="about.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 About
               </a>
               <a class="" href="service.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 Services
               </a>
               <a class="" href="price.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 Pricing
               </a>
               <a class="" href="contact.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 Contact Us
               </a>
             </div>
