--- a/service.html
+++ b/service.html
@@ -100,7 +100,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s1.png" alt="">
+              <img src="s1.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -120,7 +120,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s2.png" alt="">
+              <img src="s2.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -140,7 +140,7 @@
         <div class="col-md-6 col-lg-4 ">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s3.png" alt="">
+              <img src="s3.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -160,7 +160,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s4.png" alt="">
+              <img src="s4.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -180,7 +180,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s5.png" alt="">
+              <img src="s5.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -200,7 +200,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s6.png" alt="">
+              <img src="s6.png" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -277,23 +277,23 @@
             </h4>
             <div class="info_links">
               <a class="" href="index.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 Home
               </a>
               <a class="" href="about.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 About
               </a>
               <a class="active" href="service.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 Services
               </a>
               <a class="" href="price.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="/nav-bullet.png" alt="">
                 Pricing
               </a>
               <a class="" href="contact.html">
-                <img src="images/nav-bullet.png" alt="">
+                <img src="nav-bullet.png" alt="">
                 Contact Us
               </a>
             </div>
