--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="s1.png" alt="">
+              <img src="s1.jpg" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -219,7 +219,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="s2.png" alt="">
+              <img src="s2.jpg" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -235,7 +235,7 @@
         <div class="col-md-6 col-lg-4 ">
           <div class="box ">
             <div class="img-box">
-              <img src="s3.png" alt="">
+              <img src="s3.jpg" alt="">
             </div>
             <div class="detail-box">
               <h4>
@@ -251,7 +251,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
-              <img src="s4.png" alt="">
+              <img src="s4.jpg" alt="">
             </div>
             <div class="detail-box">
               <h4>
